# eg-power-tariffs-plugin

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  build.gradle.kts  docker-compose.yaml  plugin_manifest.yaml  pyproject.toml  settings.gradle.kts
.githooks/: pre-commit
data/metering_grid_areas/: mgas.csv
data/operators/: operators.csv
data/power-tariffs/: 14900.json
data/power_tariffs/: tariffs_compositions.csv  tariffs_headers.csv
gradle/: libs.versions.toml
migrations/: init_db.sql  inserts.sql
src/: __init__.py  alerting.py  api.py  db.py  env.py  exceptions.py  init.py  main.py  model.py  power_tariff_service.py  router.py  utils.py
src/clients/: elomraden.py  elomraden_model.py
src/importers/: grid_operators_importer.py  metering_grid_areas_importer.py
src/importers/power_tariffs/: importer.py  models.py  utils.py
src/main/kotlin/io/engrate/powertariffs/: App.kt  exceptions.kt
src/main/kotlin/io/engrate/powertariffs/api/: RequestLoggingFilter.kt  responses.kt
src/main/kotlin/io/engrate/powertariffs/api/controller/: PowerTariffsController.kt
src/main/kotlin/io/engrate/powertariffs/api/dto/: power-tariffs.kt
src/main/kotlin/io/engrate/powertariffs/client/coreservices/: PluginRegistrar.kt
src/main/kotlin/io/engrate/powertariffs/client/elomraden/: ElomradenApiClient.kt  exceptions.kt  models.kt
src/main/kotlin/io/engrate/powertariffs/config/: RestTemplateConfig.kt
src/main/kotlin/io/engrate/powertariffs/importers/: ImportersProperties.kt  MeteringGridAreasImporter.kt  OperatorsImporter.kt  PowerTariffsImporter.kt
src/main/kotlin/io/engrate/powertariffs/persistence/repository/: GridOperatorsRepository.kt  GridProviderRepository.kt  MeteringGridAreasPowerTariffsRepository.kt  MeteringGridAreasRepository.kt  PowerTariffsRepository.kt
src/main/kotlin/io/engrate/powertariffs/persistence/schema/: GridOperator.kt  GridProvider.kt  MeteringGridArea.kt  MeteringGridAreaPowerTariff.kt  PowerTariff.kt  PowerTariffFee.kt  TariffComposition.kt  TariffEmbeddables.kt
src/main/kotlin/io/engrate/powertariffs/service/: PowerTariffsService.kt
src/main/resources/: application-dev.yaml  application.yaml  logback-spring.xml
src/main/resources/data/metering_grid_areas/: mgas.csv
src/main/resources/data/operators/: operators.csv
src/main/resources/db/migrations/: U1__Initial_PowerTariff_schema.sql   V1__Initial_PowerTariff_schema.sql
src/migrations/: env.py
src/migrations/versions/: 315f6c882b1b_add_goteborg_energi_tariff_definition.py  52cb8eeee2d6_add_ellevio_tariff_definition.py  7c2a48fa940a_add_tekniska_verken_katrineholm_tariff_definition.py  9824b55b6d3b_initial_powertariff_schema.py  cf216217b707_add_tekniska_verken_linköping_tariff_.py  d1abcbd074b0_add_malaren_powertariff_def_.py  d9bf73034df3_add_karlstads_tariff_definition.py
src/repositories/: orm_model.py  power_tariffs_repository.py  powtar_repository.py
src/routers/: admin_router.py  dev_router.py  main_router.py
src/sdk/: plugin_manager.py
